cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(pink-hell-planet)

if(MSVC)
    # multithreaded build in MSVC
    add_compile_options(/MP)
    if (NOT CMAKE_BUILD_TYPE STREQUAL Debug)
        add_compile_options(/O2)
    endif()
    add_compile_options(/W3 /MT)
else()
    if (NOT CMAKE_BUILD_TYPE STREQUAL Debug)
        add_compile_options(-O3)
    endif()
    add_compile_options(-static-libgcc -static-libstdc++ -Wall)
endif()

set(OpenGL_GL_PREFERENCE GLVND)
find_package(OpenGL REQUIRED)
add_subdirectory(thirdparty/glad)
add_subdirectory(thirdparty/glfw)
add_subdirectory(thirdparty/glm)
add_subdirectory(thirdparty/tinyobjloader)
add_subdirectory(thirdparty/lodepng)
add_subdirectory(thirdparty/bullet3)
add_subdirectory(src)
